[gd_scene load_steps=35 format=3 uid="uid://clr1pqi3mxavn"]

[ext_resource type="Script" path="res://scenes/inventory/newinventory.gd" id="1_bnrs2"]
[ext_resource type="FontFile" uid="uid://bkgdhvj2ggyfo" path="res://assets/fonts/CONSOLA.TTF" id="5_nextx"]
[ext_resource type="LabelSettings" uid="uid://gts2l8irhv00" path="res://assets/fonts/light_blue_console.tres" id="8_jfj1k"]
[ext_resource type="PackedScene" uid="uid://bbv8vjmfgeck6" path="res://scenes/inventory/item_container.tscn" id="9_tup0q"]
[ext_resource type="LabelSettings" uid="uid://cmfsg5d7438bt" path="res://assets/fonts/yellow_console_text.tres" id="9_ympai"]
[ext_resource type="LabelSettings" uid="uid://dp6o68cs1rv5i" path="res://assets/fonts/light_orange_console.tres" id="10_xp1ku"]
[ext_resource type="LabelSettings" uid="uid://b6cf5k4q5kd71" path="res://assets/fonts/dark_blue_console_text.tres" id="11_5v8ib"]
[ext_resource type="PackedScene" uid="uid://mje13m0bdoj2" path="res://scenes/inventory/party/battle_turin.tscn" id="11_15p3a"]
[ext_resource type="Script" path="res://scenes/inventory/CharInfoTab.gd" id="11_suue3"]
[ext_resource type="PackedScene" uid="uid://bspvewmvuf474" path="res://scenes/inventory/party/battle_kath.tscn" id="13_n2m06"]
[ext_resource type="Texture2D" uid="uid://cdosujgmkwpny" path="res://assets/battle/character_sprites/kath_batalha.png" id="13_wcldh"]
[ext_resource type="Script" path="res://scenes/inventory/PersonagemInfo.gd" id="14_fw4ly"]
[ext_resource type="Script" path="res://scripts/info_box_container.gd" id="14_uxv63"]
[ext_resource type="Texture2D" uid="uid://drc3a4m5ua1qj" path="res://assets/inventory/item_panel.png" id="17_6luss"]
[ext_resource type="Script" path="res://scenes/inventory/EquipamentoTab.gd" id="17_8r86p"]
[ext_resource type="Texture2D" uid="uid://o3kx4ky6xyb8" path="res://assets/inventory/head_icon.png" id="18_7dxwe"]
[ext_resource type="Script" path="res://scenes/inventory/party/battle_turin.gd" id="18_fypia"]
[ext_resource type="Texture2D" uid="uid://ciutm8ye7tx2d" path="res://assets/inventory/body_icon.png" id="19_a8431"]
[ext_resource type="Texture2D" uid="uid://cpklf8r3vwysw" path="res://assets/inventory/foot_icon.png" id="20_5f674"]
[ext_resource type="Texture2D" uid="uid://dqwifavd2sr2s" path="res://assets/inventory/l_hand_icon.png" id="21_776bm"]
[ext_resource type="Texture2D" uid="uid://c7g1twlxyqpaf" path="res://assets/inventory/r_hand_icon.png" id="22_ypr8a"]
[ext_resource type="Texture2D" uid="uid://bpmjljchkk3fu" path="res://assets/inventory/acessory_icon.png" id="23_tp1sq"]
[ext_resource type="Texture2D" uid="uid://bsxpxv50u62xl" path="res://assets/inventory/arrow.png" id="25_lwknu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7besx"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 2
expand_margin_left = 11.0
expand_margin_top = 5.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_10aoo"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umvl5"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_top = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr4wc"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
corner_radius_top_left = 3
corner_radius_top_right = 2
expand_margin_left = 11.0
expand_margin_top = 5.0
expand_margin_right = 8.0
expand_margin_bottom = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_m78y7"]
font = ExtResource("5_nextx")
font_size = 27
font_color = Color(1, 0.560784, 0.25098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_18och"]
font = ExtResource("5_nextx")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_capk8"]
font = ExtResource("5_nextx")
font_size = 27
font_color = Color(0.666667, 0.788235, 0.247059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c15km"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_negui"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
corner_radius_top_left = 3
corner_radius_top_right = 2
expand_margin_left = 11.0
expand_margin_top = 5.0
expand_margin_right = 8.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2j27"]
content_margin_left = 25.0
content_margin_top = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vmxi8"]
texture = ExtResource("17_6luss")

[node name="Inventory" type="CanvasLayer"]
script = ExtResource("1_bnrs2")

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = 9.0
offset_top = 21.0
offset_right = 1141.0
offset_bottom = 643.0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
theme_override_constants/outline_size = 0
theme_override_constants/side_margin = 13
theme_override_fonts/font = ExtResource("5_nextx")
theme_override_font_sizes/font_size = 30
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_10aoo")
theme_override_styles/panel = SubResource("StyleBoxFlat_umvl5")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_qr4wc")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_7besx")
current_tab = 0
tab_focus_mode = 0

[node name="Personagens" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Personagens"]
layout_mode = 2
theme_override_constants/separation = 47

[node name="PartyContainer" type="VBoxContainer" parent="TabContainer/Personagens/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 22

[node name="a" type="Label" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Mochila" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
metadata/_tab_index = 2

[node name="InventoryContainer" type="VBoxContainer" parent="TabContainer/Mochila"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 16

[node name="ItemTopSpacer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ClassMochilaLabel" type="Label" parent="TabContainer/Mochila/InventoryContainer/ItemTopSpacer"]
layout_mode = 2
text = " public class"
label_settings = SubResource("LabelSettings_m78y7")

[node name="ClassMochilaLabel2" type="Label" parent="TabContainer/Mochila/InventoryContainer/ItemTopSpacer"]
layout_mode = 2
text = "Mochila"
label_settings = ExtResource("8_jfj1k")

[node name="ClassMochilaLabel3" type="Label" parent="TabContainer/Mochila/InventoryContainer/ItemTopSpacer"]
layout_mode = 2
text = "{"
label_settings = ExtResource("9_ympai")

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Mochila/InventoryContainer"]
custom_minimum_size = Vector2(0, 361.975)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemContainer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.97

[node name="ItemLeftSpacer" type="VBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.64

[node name="MochilaText" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer"]
layout_mode = 2

[node name="ListItem" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "  List"
label_settings = ExtResource("8_jfj1k")

[node name="ListItem4" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "<"
label_settings = SubResource("LabelSettings_18och")

[node name="ListItem2" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "Item"
label_settings = ExtResource("8_jfj1k")

[node name="ListItem3" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = ">"
label_settings = SubResource("LabelSettings_18och")

[node name="mochila" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "mochila"
label_settings = SubResource("LabelSettings_18och")

[node name="mochila2" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "="
label_settings = ExtResource("10_xp1ku")

[node name="mochila3" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "["
label_settings = ExtResource("11_5v8ib")

[node name="ItemList" type="HFlowContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer"]
custom_minimum_size = Vector2(730, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="ItemContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemList" instance=ExtResource("9_tup0q")]
layout_mode = 2

[node name="ItemRightSpacer" type="VBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 0.18

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemRightSpacer"]
layout_mode = 2

[node name="Asterisco2" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemRightSpacer/HBoxContainer"]
layout_mode = 2
text = "]"
label_settings = ExtResource("11_5v8ib")

[node name="Asterisco3" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemRightSpacer/HBoxContainer"]
layout_mode = 2
text = "}"
label_settings = ExtResource("9_ympai")

[node name="InfoBoxContainer" type="VBoxContainer" parent="TabContainer/Mochila/InventoryContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
script = ExtResource("14_uxv63")

[node name="ItemDescriptionContainer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="DescriptionHSpacer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer/ItemDescriptionContainer"]
custom_minimum_size = Vector2(33.02, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="Asterisco" type="Label" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer/ItemDescriptionContainer/DescriptionHSpacer"]
layout_mode = 2
text = " *"
label_settings = SubResource("LabelSettings_18och")

[node name="ItemInfoContainer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer/ItemDescriptionContainer"]
custom_minimum_size = Vector2(33.02, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="ItemInfoLabel" type="Label" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer/ItemDescriptionContainer/ItemInfoContainer"]
custom_minimum_size = Vector2(1081, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_capk8")
autowrap_mode = 2

[node name="b" type="Label" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Opções" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="c" type="Label" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="PersonagemInfo" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6
script = ExtResource("14_fw4ly")
metadata/_tab_index = 6

[node name="TabContainer" type="TabContainer" parent="TabContainer/PersonagemInfo"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
theme_override_constants/outline_size = 0
theme_override_constants/side_margin = 16
theme_override_constants/icon_max_width = 54
theme_override_fonts/font = ExtResource("5_nextx")
theme_override_font_sizes/font_size = 30
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_10aoo")
theme_override_styles/panel = SubResource("StyleBoxFlat_c15km")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_negui")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_7besx")
current_tab = 0
tab_focus_mode = 0
script = ExtResource("11_suue3")

[node name="Status" type="ScrollContainer" parent="TabContainer/PersonagemInfo/TabContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h2j27")
horizontal_scroll_mode = 0
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/PersonagemInfo/TabContainer/Status"]
layout_mode = 2

[node name="ClassNameLabel" type="RichTextLabel" parent="TabContainer/PersonagemInfo/TabContainer/Status/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_nextx")
theme_override_font_sizes/normal_font_size = 29
bbcode_enabled = true
text = "[color=#cf6d1d]public class [/color][color=#228096]Personagem [/color]{"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/PersonagemInfo/TabContainer/Status/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 53

[node name="TextureRect" type="TextureRect" parent="TabContainer/PersonagemInfo/TabContainer/Status/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("13_wcldh")
expand_mode = 3
stretch_mode = 4
flip_h = true

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/PersonagemInfo/TabContainer/Status/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_nextx")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[color=#228096]String [/color][color=#66e1f8]nome [/color]= [color=green]“Kath”[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
autowrap_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="TabContainer/PersonagemInfo/TabContainer/Status/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_nextx")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[color=#228096]String [/color][color=#66e1f8]nome [/color]= [color=green]“Kath”[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
autowrap_mode = 0

[node name="CodeLabel" type="RichTextLabel" parent="TabContainer/PersonagemInfo/TabContainer/Status/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_nextx")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[color=#228096]String [/color][color=#66e1f8]nome [/color]= [color=green]“Kath”[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
autowrap_mode = 0

[node name="a" type="Label" parent="TabContainer/PersonagemInfo/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Equipamento" type="MarginContainer" parent="TabContainer/PersonagemInfo/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("17_8r86p")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento"]
layout_mode = 2

[node name="CharInfoContainer" type="HBoxContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBFContainer" type="VBoxContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
layout_mode = 2

[node name="HeadSlot" type="Button" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("18_7dxwe")
icon_alignment = 1
expand_icon = true

[node name="BodySlot" type="Button" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("19_a8431")
icon_alignment = 1
expand_icon = true

[node name="FeetSlot" type="Button" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("20_5f674")
icon_alignment = 1
expand_icon = true

[node name="CharacterSprite" type="TextureRect" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("13_wcldh")
expand_mode = 3
stretch_mode = 4
flip_h = true

[node name="HHAContainer" type="VBoxContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
layout_mode = 2

[node name="LHandSlot" type="Button" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("21_776bm")
icon_alignment = 1
expand_icon = true

[node name="RHandSlot" type="Button" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("22_ypr8a")
icon_alignment = 1
expand_icon = true

[node name="AcessorySlot" type="Button" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("23_tp1sq")
icon_alignment = 1
expand_icon = true

[node name="OldStats" type="RichTextLabel" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_nextx")
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ArrowStats" type="TextureRect" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
visible = false
layout_mode = 2
texture = ExtResource("25_lwknu")
stretch_mode = 3

[node name="NewStats" type="RichTextLabel" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
visible = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_nextx")
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
autowrap_mode = 0

[node name="EquipmentContainer" type="ScrollContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EquipContainer" type="VBoxContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/EquipmentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CliqueTexto" type="RichTextLabel" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_nextx")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[color=#808080]
//Selecione o espaço de armadura para equipar [/color]"
fit_content = true

[node name="HeadContainer" type="GridContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="BodyContainer" type="GridContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="FeetContainer" type="GridContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="HandContainer" type="GridContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="AcessoryContainer" type="GridContainer" parent="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="b" type="Label" parent="TabContainer/PersonagemInfo/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Codigo" type="MarginContainer" parent="TabContainer/PersonagemInfo/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="c" type="Label" parent="TabContainer/PersonagemInfo/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="Classe" type="MarginContainer" parent="TabContainer/PersonagemInfo/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[node name="Party" type="Node2D" parent="."]
position = Vector2(1311, 86)

[node name="Turin" parent="Party" instance=ExtResource("11_15p3a")]
z_index = 3
z_as_relative = false
position = Vector2(-40, 246)
scale = Vector2(4, 4)
script = ExtResource("18_fypia")

[node name="Kath" parent="Party" instance=ExtResource("13_n2m06")]
position = Vector2(7, 185)

[connection signal="tab_changed" from="TabContainer/PersonagemInfo/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer/HeadSlot" to="TabContainer/PersonagemInfo/TabContainer/Equipamento" method="_on_head_slot_pressed"]
[connection signal="pressed" from="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer/BodySlot" to="TabContainer/PersonagemInfo/TabContainer/Equipamento" method="_on_body_slot_pressed"]
[connection signal="pressed" from="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer/FeetSlot" to="TabContainer/PersonagemInfo/TabContainer/Equipamento" method="_on_feet_slot_pressed"]
[connection signal="pressed" from="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer/LHandSlot" to="TabContainer/PersonagemInfo/TabContainer/Equipamento" method="_on_l_hand_slot_pressed"]
[connection signal="pressed" from="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer/RHandSlot" to="TabContainer/PersonagemInfo/TabContainer/Equipamento" method="_on_r_hand_slot_pressed"]
[connection signal="pressed" from="TabContainer/PersonagemInfo/TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer/AcessorySlot" to="TabContainer/PersonagemInfo/TabContainer/Equipamento" method="_on_acessory_slot_pressed"]
